Update 2.1. Definition and properties of matrices.md

--- a/2.0.Mathematical_Foundation/2.1. Linear Algebra and Calculus/2.1. Definition and properties of matrices.md
+++ b/2.0.Mathematical_Foundation/2.1. Linear Algebra and Calculus/2.1. Definition and properties of matrices.md
@@ -26,7 +26,7 @@ Properties of Matrices
 These are just a few of the many properties and concepts related to matrices. They're incredibly useful in a wide range of applications, from solving systems of linear equations to representing transformations in geometry. So, go ahead and dive deeper into the world of matrices!
 
 
-
+**Deep Learning Perspective**
 I'll explain the concepts you mentioned in the context of deep learning and their significance in the field.
 
 1. Matrix Addition and Subtraction:
