Update 2.1. Definition and properties of matrices.md

--- a/2.0.Mathematical_Foundation/2.1. Linear Algebra and Calculus/2.1. Definition and properties of matrices.md
+++ b/2.0.Mathematical_Foundation/2.1. Linear Algebra and Calculus/2.1. Definition and properties of matrices.md
@@ -27,7 +27,7 @@ These are just a few of the many properties and concepts related to matrices. Th
 
 
 ### **Deep Learning Perspective**
-I'll explain the concepts you mentioned in the context of deep learning and their significance in the field.
+I'll explain the concepts in the context of deep learning and their significance in the field.
 
 1. Matrix Addition and Subtraction:
 Matrix addition and subtraction are element-wise operations that combine two matrices of the same dimensions. In deep learning, these operations are used to update weights and biases during the training process. For example, in gradient descent, we subtract the gradient (a matrix) from the current weights (another matrix) to update the weights.
